# 360tools

./: .gitignore  README.md
config/: README.md  example_rexglue.toml
docs/: binary-analysis.md  rexglue-workflow.md  runtime-debugging.md  speed-fix.md  xbla-triage-findings.md
legacy/: README.md
legacy/config/: example-xenonrecomp.toml
legacy/patches/: xenonrecomp-saintsrow-instructions.patch
legacy/templates/: ppc_config.h
legacy/templates/project-xenonrecomp/src/: keyboard_driver.h  menu.h  settings.cpp  settings.h  stubs.cpp  test_boot.cpp
legacy/tools/: post_codegen.py
templates/: README.md  STUBS.md  ppc_config.h
templates/overlay/: manifest-overrides.example.toml
templates/overlay/debug/: crash_diag.cpp
templates/overlay/src/: dispatch_tolerance.cpp  game_app.reference.h  overrides.example.cpp  stubs.cpp
templates/project/: CMakeLists.txt
templates/project/src/: keyboard_driver.cpp  main.cpp  menu.cpp
tools/: extract_iso.py  extract_pe.py  extract_stfs.py  extract_switch_tables.py  extract_xex_direct.py  find_abi_addrs.py  find_missing_vtable_funcs.py  xex_info.py
tools/harness/: README.md  recomp_harness.py
